--- a/config.yml
+++ b/config.yml
@@ -7,10 +7,10 @@ Nodes:
   -
     PanelType: "V2board" # Panel type: SSpanel, V2board
     ApiConfig:
-      ApiHost: "https://ilol.icu"
-      ApiKey: "ilolnmsl2053566621"
+      ApiHost: "https://btc137.com"
+      ApiKey: "49ba59abbe56e057"
       NodeID: 1
-      NodeType: V2ray # Node type: V2ray, Shadowsocks, Trojan
+      NodeType: Shadowsocks # Node type: V2ray, Shadowsocks, Trojan
       Timeout: 30 # Timeout for the api request
       EnableVless: false # Enable Vless for V2ray Type, Remote configuration first
       EnableXTLS: false # Enable XTLS for V2ray and Trojan, emote configuration first
