--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ Nodes:
       ApiHost: "http://btc137.com"
       ApiKey: "49ba59abbe56e057"
       NodeID: 1
-      NodeType: Shadowsocks # Node type: V2ray, Shadowsocks, Trojan
+      NodeType: V2ray # Node type: V2ray, Shadowsocks, Trojan
       Timeout: 30 # Timeout for the api request
       EnableVless: false # Enable Vless for V2ray Type, Remote configuration first
       EnableXTLS: false # Enable XTLS for V2ray and Trojan, emote configuration first
