--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ Nodes:
   -
     PanelType: "V2board" # Panel type: SSpanel, V2board
     ApiConfig:
-      ApiHost: "http://btc137.com"
+      ApiHost: "http://43.129.231.22"
       ApiKey: "49ba59abbe56e057"
       NodeID: 1
       NodeType: Shadowsocks # Node type: V2ray, Shadowsocks, Trojan
